--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-share-18",
+  "name": "@julienwilliams/react-share",
   "version": "4.4.0",
   "description": "Social media share buttons and share counts for React.",
   "main": "./lib/index.js",
@@ -37,7 +37,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/nygardk/react-share"
+    "url": "https://github.com/julienwilliams/react-share"
   },
   "author": {
     "name": "Klaus Nygård",
